[package]
name = "masm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
faerie = { git="https://github.com/m4b/faerie/" }
nom = "7.1.3"
num = "0.4.0"
target-lexicon = "0.12.8"
