[package]
name = "masm"
description = "A simple assembler for the x86_64 architecture written in Rust."
authors = ["Alejandro Osornio <aoxo.contact@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
faerie = { git="https://github.com/m4b/faerie/", branch="master" }
num = "0.4.0"
target-lexicon = "0.12.8"
